Fixed the h3s sticking out a bit

--- a/css/screen.css
+++ b/css/screen.css
@@ -28,8 +28,6 @@ h3 {
 	font-weight: bold;
 	color: #5D7D93;
 	text-shadow: 1px 1px 0px #1e3240, 2px 2px 0px #1e3240, 3px 3px 0px #1e3240;
-	position: relative;
-	top: -4px;
 }
 
 p {
